# poetry-workspace-plugin-build-example

./: LICENSE  README.MD  pyproject.toml
workspace_a/: pyproject.toml
workspace_b/: pyproject.toml
