[tool.poetry]
name = "pwp-build-workspace-b"
version = "0.1.0"
description = "workspace b"
authors = []

[tool.poetry-workspace-plugin]
parent = "../"
# the default dependency range to be used for workspace dependencies of this package. maybe should be allowed only for root?
dependency-range = "" # exact match

[tool.poetry-workspace-plugin.dependency-ranges]
# each workspace dep can have its own range config
pwp-build-workspace-a = "~"

[tool.poetry.dependencies]
pwp-build-workspace-a = { path = "../workspace_a" }
poetry = "^1.2.0a1"
python = "^3.9"

